Update charset for ASCII rendering
if you got any problems with the new charset then you can tell me

discord: floofy._

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     let custommediatype = null;
     let usecolour = false;
     let asciiData = [];
-    const charset = ".,-~:;=!*#$@";
+    const charset = " '_.,-=+:;cba!?0123456789$W#@Ñ";
     const display = document.getElementById('display');
     const asciicontainer = document.getElementById('asciicontainer');
     const progresscontainer = document.getElementById('progresscontainer');
